--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 .idea/*
+www/static/images/uploads/*
 
 # Windows Installer files
 *.cab
